@@ -80,6 +80,18 @@ extern "C"
 using namespace std::literals;
 
 
+void PQXX_COLD PQXX_LIBEXPORT
+pqxx::internal::skip_init_ssl(int skips) noexcept
+{
+  // We got "skip flags," but we pass to libpq which libraries we *do* want it
+  // to initialise.
+  PQinitOpenSSL(
+    (skips & (1 << skip_init::openssl)) == 0,
+    (skips & (1 << skip_init::crypto)) == 0
+  );
+}
+
+
 std::string PQXX_COLD
 pqxx::encrypt_password(char const user[], char const password[])
 {
